--- a/index.html
+++ b/index.html
@@ -2008,6 +2008,7 @@ onclick="fecharModal(event)">Fechar</button></div></div>
 
         <label style="margin-top: 10px; display: block;">Tamanhos disponíveis *</label>
         <div id="produtoTamanhosGroup" class="checkbox-group" style="margin-bottom: 15px;">
+            <label><input type="checkbox" name="tamanhos" value="Único"> P</label>
             <label><input type="checkbox" name="tamanhos" value="P"> P</label>
             <label><input type="checkbox" name="tamanhos" value="M"> M</label>
             <label><input type="checkbox" name="tamanhos" value="G"> G</label>
