--- a/index.html
+++ b/index.html
@@ -1804,7 +1804,7 @@ onclick="fecharModal(event)">Fechar</button></div></div>
   </div>
 </div>
 
-<div id="modalAdminGerenciarUsuario" class="modal"><div class="modal-content"><h3>Gerenciar Usuário</h3><div id="adminGerenciarConteudo"></div></div></div>
+<div id="modalGerenciarUsuario" class="modal"><div class="modal-content"><h3>Gerenciar Usuário</h3><div id="adminGerenciarConteudo"></div></div></div>
 
 <div id="modalGerenciarLojaAdmin" class="modal"><div class="modal-content"><h3>Gerenciar Loja</h3><div class="popup-section"><h4>Deletar Produto</h4><div id="adminDeletarProdutoList" class="scrollable-list"></div></div><div class="popup-section"><h4>Ativar/Desativar Loja de Vendedor</h4><div id="adminToggleLojaList" class="scrollable-list"></div></div><button data-modal-id="modalGerenciarLojaAdmin" onclick="fecharModal(event)">Fechar</button></div></div>
 
@@ -1824,6 +1824,31 @@ onclick="fecharModal(event)">Fechar</button></div></div>
     <textarea id="marketingCorpo" placeholder="Corpo da mensagem"></textarea>
     <button onclick="enviarNotificacaoMarketing()">🚀 Enviar para todos</button>
     <button data-modal-id="modalNotificacaoMarketing" onclick="fecharModal(event)">❌ Fechar</button>
+  </div>
+</div>
+
+<div id="modalAlterarCidadeInputs" class="modal" onclick="fecharModal(event)">
+  <div class="modal-content" onclick="event.stopPropagation()">
+    <h3>🏙️ Alterar Localização</h3>
+    <p>Digite o novo estado e cidade desejados.</p>
+    <label for="novoEstadoInput">Novo Estado:</label>
+    <input id="novoEstadoInput" type="text" placeholder="Ex: Espírito Santo" oninput="this.value = formatarNomeProprio(this.value)">
+    <label for="novoCidadeInput">Nova Cidade:</label>
+    <input id="novoCidadeInput" type="text" placeholder="Ex: Aracruz" oninput="this.value = formatarNomeProprio(this.value)">
+    <div style="display: flex; gap: 10px; margin-top: 15px;">
+        <button data-modal-id="modalAlterarCidadeInputs" onclick="fecharModal(event)" style="background-color: #555;">Cancelar</button>
+        <button id="btnConfirmarInputsCidade" onclick="processarInputsCidade()">Confirmar</button>
+    </div>
+  </div>
+</div>
+
+<div id="modalConfirmarAlteracaoCidade" class="modal" onclick="fecharModal(event)">
+  <div class="modal-content" onclick="event.stopPropagation()">
+    <h3>Confirmar Alteração?</h3>
+    <p>Você confirma a solicitação para alterar sua cidade para <b id="confirmCidadeEstadoTexto"></b>? Isso abrirá o WhatsApp para agilizar.</p>
+    <div style="display: flex; gap: 10px; margin-top: 15px;">
+      <button id="btnNaoConfirmarCidade" onclick="fecharModalAtual()" style="background-color: #555;">Não</button>
+      <button id="btnSimConfirmarCidade">Sim, Solicitar</button> </div>
   </div>
 </div>
 
@@ -2129,7 +2154,7 @@ onclick="fecharModal(event)">Fechar</button></div></div>
 }
 
 /* ADICIONE ESTE CÓDIGO DENTRO DA TAG <style> */
-#modalAdminGerenciarUsuario .modal-content {
+#modalAdminUsuario .modal-content {
     max-height: 80vh; /* Limita a altura máxima do modal */
     overflow-y: auto;   /* Adiciona a barra de rolagem vertical quando necessário */
 }
@@ -5820,11 +5845,11 @@ async function abrirModalGerenciarUsuario(uid) {
             <button style="background-color: #c0392b; margin-top: 10px;" onclick="adminDeletarUsuario('${uid}', '${u.nome}')">DELETAR USUÁRIO</button>
         </div>
         <!-- Fim do restante do HTML -->
-        <button data-modal-id="modalAdminGerenciarUsuario" onclick="fecharModal(event)" style="margin-top: 20px;">❌ Fechar</button>
+        <button data-modal-id="modalGerenciarUsuario" onclick="fecharModal(event)" style="margin-top: 20px;">❌ Fechar</button>
     `;
 
     fecharTodosOsModais(); // Fecha o "Aguarde..."
-    abrirModal('modalAdminGerenciarUsuario'); // Abre o modal
+    abrirModal('modalGerenciarUsuario'); // Abre o modal
   } catch (error) {
       fecharTodosOsModais();
       console.error("Erro ao buscar dados do usuário:", error);
@@ -6791,16 +6816,41 @@ async function executarAlteracaoSenha() {
 async function solicitarAlteracaoCidade() {
     if (!perfil) return exibirPopup("Erro", "Não foi possível carregar seu perfil.");
 
-    // INPUTS para o usuário digitar a nova cidade/estado
-    const novoEstadoInput = prompt("Digite o nome do NOVO ESTADO:");
-    if (!novoEstadoInput) return; // Cancelou
-    const novaCidadeInput = prompt(`Digite o nome da NOVA CIDADE em ${formatarNomeProprio(novoEstadoInput)}:`);
-    if (!novaCidadeInput) return; // Cancelou
+    // Limpa os inputs ao abrir
+    document.getElementById('novoEstadoInput').value = '';
+    document.getElementById('novoCidadeInput').value = '';
+
+    abrirModal('modalAlterarCidadeInputs');
+}
+
+// Função chamada pelo botão "Confirmar" do modal de inputs
+function processarInputsCidade() {
+    const novoEstadoInput = document.getElementById('novoEstadoInput').value.trim();
+    const novaCidadeInput = document.getElementById('novoCidadeInput').value.trim();
+
+    if (!novoEstadoInput || !novaCidadeInput) {
+        // Mostra erro dentro do modal ou usa exibirPopup
+        exibirPopup("Atenção", "Por favor, preencha o estado e a cidade.");
+        return;
+    }
 
     const novoEstadoFormatado = formatarNomeProprio(novoEstadoInput);
     const novaCidadeFormatada = formatarNomeProprio(novaCidadeInput);
 
-    if (!confirm(`Confirma a solicitação para alterar sua cidade para ${novaCidadeFormatada} - ${novoEstadoFormatado}? Isso abrirá o WhatsApp para agilizar.`)) return;
+    // Fecha o modal de inputs
+    fecharModalAtual();
+
+    // Abre o modal de confirmação
+    document.getElementById('confirmCidadeEstadoTexto').textContent = `${novaCidadeFormatada} - ${novoEstadoFormatado}`;
+    // Define a ação do botão "Sim" para chamar a função final com os dados corretos
+    document.getElementById('btnSimConfirmarCidade').onclick = () => executarAlteracaoCidadeAposConfirmacao(novoEstadoFormatado, novaCidadeFormatada);
+    abrirModal('modalConfirmarAlteracaoCidade');
+}
+
+// Função que executa a lógica principal após a confirmação
+async function executarAlteracaoCidadeAposConfirmacao(novoEstadoFormatado, novaCidadeFormatada) {
+    // Fecha o modal de confirmação
+    fecharModalAtual();
 
     exibirAguarde("Criando solicitação...");
     try {
@@ -6812,7 +6862,6 @@ async function solicitarAlteracaoCidade() {
             usuarioNome: perfil.nome,
             cidadeAtual: perfil.cidade,
             estadoAtual: perfil.estado,
-            // Salva o que o usuário digitou
             novoEstadoSolicitado: novoEstadoFormatado,
             novaCidadeSolicitada: novaCidadeFormatada,
             status: "pendente",
@@ -6820,13 +6869,13 @@ async function solicitarAlteracaoCidade() {
         });
 
         const mensagem = encodeURIComponent(`Olá! Gostaria de solicitar a alteração da minha cidade no app Nova Versão.\n\nUsuário: ${perfil.nome}\nCidade Atual: ${perfil.cidade} - ${perfil.estado}\nNova Cidade: ${novaCidadeFormatada} - ${novoEstadoFormatado}\n\nID da Solicitação: ${solicitacaoRef.id}`);
-        const phoneNum = WHATSAPP_ADM_PHONE.startsWith('55') ? WHATSAPP_ADM_PHONE : `55${WHATSAPP_ADM_PHONE}`;
+        const phoneNum = WHATSAPP_ADM_PHONE.startsWith('55') ? WHATSAPP_ADM_PHONE : `55${WHATSAPP_ADM_PHONE.replace(/\D/g, '')}`; // Garante formato E.164
         window.open(`https://wa.me/${phoneNum}?text=${mensagem}`, '_blank');
 
         fecharAguarde(null, true);
         exibirPopup("Sucesso", "Solicitação enviada! Você foi redirecionado para o WhatsApp.");
         notifyAdmins("🏙️ Alteração de Cidade", `${perfil.nome} solicitou alterar para ${novaCidadeFormatada} - ${novoEstadoFormatado} (ID: ${solicitacaoRef.id}).`, { link: '#solicitacoes' });
-        fecharModalAtual();
+        // Não precisa fechar modal aqui, pois já foram fechados
 
     } catch (error) {
         fecharAguarde(null, true);
